# DaybreakGameEngine

./: CMakeLists.txt  DaybreakEngine.sln  LICENSE  README.md
ThunderSurge-core/: TO-DO.txt  ThunderSurge-core.vcxproj  ThunderSurge-core.vcxproj.filters  main.cpp
ThunderSurge-core/aurora/components/: Camera.h  FreeLook.h  FreeMove.h  GameComponent.h  Light.h  MeshRenderer.h  Terrain.h
ThunderSurge-core/aurora/core/: CoreEngine.cpp  CoreEngine.h  Game.h  GameObject.cpp  GameObject.h  Transform.cpp  Transform.h
ThunderSurge-core/aurora/graphics/: window.cpp  window.h
ThunderSurge-core/aurora/utils/: FileUtils.h  ImageLoader.h  Log.h  Timer.h
ThunderSurge-core/daybreak/components/: ForwardLighting.h  Skybox.h  Sprite.cpp  Sprite.h
ThunderSurge-core/daybreak/core/: Constants.h  Daybreak.cpp  Daybreak.h  GameState.h  Math.cpp  Math.h  StateManager.cpp  StateManager.h  Window.cpp  Window.h
ThunderSurge-core/daybreak/graphics/: CubeMap.h  Forward.h  Material.h  Mesh.cpp  Mesh.h  PhongShader.cpp  PhongShader.h  PostFX.cpp  PostFX.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  UniformBuffer.h
ThunderSurge-core/daybreak/utils/: MathUtils.h
ThunderSurge-core/game/: MenuState.cpp  MenuState.h  Terrain.cpp  Terrain.h  TestGame.h  main.cpp
ThunderSurge-core/src/graphics/: Sprite.cpp  Sprite.h  StaticSprite.h  window.cpp  window.h
ThunderSurge-core/src/input/: keyboard.cpp  keyboard.h  mouse.cpp
ThunderSurge-core/src/math/: mat4.cpp  mat4.h  math.h  util.h  vec2.h  vec3.h  vec4.h
ThunderSurge-core/src/utils/: Timer.h  fileutils.h
ThunderSurge-core/thundersurge/components/: Camera.h  FreeLook.h  FreeMove.h  GameComponent.h  Light.h  MeshRenderer.h  Terrain.h
docs/: index.html
(+194 files in other folders)
